[package]
name = "warp-accept-benchmark"
version = "0.1.0"
authors = ["Piotr Sarnacki <drogus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stress-test"
path = "src/stress_test.rs"

[[bin]]
name = "websockets-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
warp = "0.2.5"
futures = "0.3.5"
pretty_env_logger = "0.4.0"
net2 = "0.2.34"

tokio-tungstenite = "0.11.0"